# CSCI2312_Game_of_Life

./: CMakeLists.txt  game_of_life.cpp  main.cpp  main_test.cpp
